[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "pc_rwalker"
version = "0.1.0"
license = {text = "BSD-3-Clause"}

[tool.scikit-build]
cmake.minimum-version = "3.22"
wheel.packages = ["pc_rwalker"]
cmake.args = [
  "-DCMAKE_CXX_FLAGS=-O3 -march=native"
]